<resources>
    <string name="app_name">Cattagram</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_page">MainPageActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="edit">Edit image profile</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="cattagram">Cattagram</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_in_with_email">Sign in with Username</string>
    <string name="create_account">Create account</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="name_account">Name_account</string>
    <string name="search">Search</string>
    <string name="your_email">Your Email</string>
    <string name="user_name">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="_0_n_obserwuj">0 \nObserwują</string>
    <string name="_0_n_obserwuje">0 \nObserwuję</string>
    <string name="user_name1">User name</string>
    <string name="register_btn_msg">Register</string>
    <string name="birthdate_et">Birthdate</string>
    <string name="comment_placeholder">Comment placeholder, Comment placeholder, Comment placeholder, Comment placeholder, Comment placeholder, Comment placeholder, Comment placeholder.</string>
    <string name="comments_empty">Be first to comment</string>
    <string name="like_count_placeholder">123</string>
    <string name="like">Like</string>
    <string name="description">Description</string>
</resources>