<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fragment_login_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="26dp"
    tools:context=".login.LoginFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="289dp"
        android:layout_height="154dp"
        android:gravity="top"
        android:src="@drawable/lapa" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/cattagram"
        android:textColor="@color/cat"
        android:textSize="48sp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:inputType="textShortMessage"
        android:layout_marginBottom="16dp"
        android:hint="@string/sign_in_with_email"
        android:textColor="@color/cat"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:inputType="textPassword"
        android:hint="@string/enter_password"
        android:textColor="@color/cat"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#3F51B5"
        android:textStyle="bold"
        android:text="@string/sing_in" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account" />

    <Button
        android:id="@+id/btnSingUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:background="@color/transparent" />

</LinearLayout>

